--- a/.gitignore
+++ b/.gitignore
@@ -81,7 +81,11 @@ dmypy.json
 
 # IDE specific files
 .idea/
+.cursor/
 
 # OS generated files
 .DS_Store
-Thumbs.db 
+Thumbs.db
+
+# Project specific
+/output/ 
